+ ability to hide workbenches in the combobox
+ added class DockConrainer to embed all kind of widgets
+ ability to define dock windows in main()
+ bug fixed in WaitCursor (override/restore waitcursor only once if several instances of WaitCursor exist at a time)
+ add new dialog to define own shortcuts
+ added Build directory and installer files
+ bug with start workbench fixed (in case if user defined start workbench is hidden)
+ Allow to open a determined page from preferences dialog
+ add context menu to tabs
+ start closing documents 
+ fixing toogle visibility
+ reimplement hide show
+ solved the performance problems to display objects in fullscreen mode (by disabling the background image)
+ freeing the resourcec on document close
+ performance critical bug fixed rendering points in Iv scenegraph (due to uninitialised transparency in Feature constructor)

Version: V0.3B4 Date: Sun Nov  6 01:20:57 2005 +++++++++++++++++++++++++++++++
+ reorganisation of Linux build system
  removed all configure scripts from module and use only the basic one
+ added Inventor node SoFCColorLegend representing a colorbar
+ Python GuiDocument and View
+ Addition Stereo modes
+ Add Python objects for Matrix and Vector
+ Annotation view provider
+ Fixing python viewproperty handling
+ changin App.DocGet() to App.document()
+ Scale options for screenshots in file dialog
+ insert Gui.addAnnotation()
+ Undock view feature
+ new Inventor node for the background gradient
+ new file dialog with options
+ options page for saving image files
+ create screenshots with transparent background (if checked)
+ new Feature properties, plane, Matrix and Vector (Plane partial implemented)...
+ start redesign of the Command framework
+ added the Template module to the project workspace

Version: V0.3B5 Date: Wed Nov 30 15:56:28 2005 +++++++++++++++++++++++++++++++
+ redesign of Command framework finished
+ download URL adjusted
+ allow to download documentation from SourceForge into another directory